--- a/index.html
+++ b/index.html
@@ -5,8 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ReiProfile</title>
+
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
     
 </body>
+
+    <header class="header">
+        <div class="navbar">
+            <div class="container">
+                <button class="menu-button">
+                    <span class="menu-button__line"></span>
+                    <span class="menu-button__line"></span>
+                    <span class="menu-button__line"></span>
+                </button>
+
+                <div class="navbar__menu">
+                    <a href="#about" class="navbar__links">
+                        <img src="img/icons/about.png" alt="About" class="icon">
+                        About
+                    </a>
+                    <a href="#work" class="navbar__links">
+                        <img src="img/icons/work.png" alt="Work" class="icon">
+                        Work
+                    </a>
+                    <a href="#reviews" class="navbar__links">
+                        <img src="img/icons/reviews.png" alt="Reviews" class="icon">
+                        Reviews
+                    </a>
+                    <a href="#contact" class="navbar__links">
+                        <img src="img/icons/contact.png" alt="Contact" class="icon">
+                        Contact
+                    </a>
+                </div>
+                <!-- /.navbar__menu -->
+            </div>
+            <!-- /.container -->
+        </div>
+        <!-- /.navbar -->
+        <div class="hero"></div>
+        <!-- /.hero -->
+    </header>
+    <!-- /.header -->
+
 </html>
