--- a/index.html
+++ b/index.html
@@ -44,7 +44,31 @@
             <!-- /.container -->
         </div>
         <!-- /.navbar -->
-        <div class="hero"></div>
+        <div class="hero">
+            <div class="container">
+                <div class="hero__info">
+                    <div class="hero__name">
+                        Rei Senjougahara
+                    </div>
+                    <!-- /.hero__name -->
+                    <div class="hero__position">
+                        Frontend Developer
+                    </div>
+                    <!-- /.hero__position -->
+                </div>
+                <!-- /.hero__info -->
+                <div class="scroll-down">
+                    <div class="scroll-down__arrow">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    Scroll Down
+                </div>
+                <!-- /.scroll-down -->
+            </div>
+            <!-- /.container -->
+        </div>
         <!-- /.hero -->
     </header>
     <!-- /.header -->
