--- a/index.html
+++ b/index.html
@@ -72,6 +72,62 @@
         <!-- /.hero -->
     </header>
     <!-- /.header -->
+
+    <main>
+        <section class="about">
+            <div class="container">
+                <div class="about__block">
+                    <div class="cell">
+                        <div class="about-block">
+                            <h3 class="title">
+                                Who Am I?
+                            </h3>
+                            <div class="about-block__description">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
+                            </div>
+                        </div>
+                        <!-- /.about-block -->
+                        <div class="about-block">
+                            <h3 class="title">
+                               What are my skills?
+                            </h3>
+                            <div class="about__progress-bar">
+                                <div class="about__progress-bar__name">html5</div>
+                                <div class="about__progress-bar__track">
+                                    <div class="about__progress-bar__track-line html"></div>
+                                </div>
+                            </div>
+                            <div class="about__progress-bar">
+                                <div class="about__progress-bar__name">css3</div>
+                                <div class="about__progress-bar__track">
+                                    <div class="about__progress-bar__track-line css"></div>
+                                </div>
+                            </div>
+                            <div class="about__progress-bar">
+                                <div class="about__progress-bar__name">jquery</div>
+                                <div class="about__progress-bar__track">
+                                    <div class="about__progress-bar__track-line jquery"></div>
+                                </div>
+                            </div>
+                            <div class="about__progress-bar">
+                                <div class="about__progress-bar__name">javascript</div>
+                                <div class="about__progress-bar__track">
+                                    <div class="about__progress-bar__track-line javascript"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.about-block -->
+                    </div>
+                    <!-- /.cell -->
+                    <div class="cell"></div>
+                    <!-- /.cell -->
+                </div>
+                <!-- /.about__block -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.about -->
+    </main>
     
     <script src="js/jquery.js"></script>
     <script src="js/script.js"></script>
