--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
 
@@ -78,48 +79,105 @@
             <div class="container">
                 <div class="about__block">
                     <div class="cell">
-                        <div class="about-block">
+                        <div class="about-block wow bounceInLeft" data-wow-delay = "0.3s">
                             <h3 class="title">
                                 Who Am I?
                             </h3>
-                            <div class="about-block__description">
+                            <div class="about-block__info">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
                             </div>
                         </div>
                         <!-- /.about-block -->
-                        <div class="about-block">
+                        <div class="about-block wow bounceInLeft" data-wow-delay = "0.5s">
                             <h3 class="title">
                                What are my skills?
                             </h3>
                             <div class="about__progress-bar">
                                 <div class="about__progress-bar__name">html5</div>
                                 <div class="about__progress-bar__track">
-                                    <div class="about__progress-bar__track-line html"></div>
+                                    <div class="about__progress-bar__track-line wow html"></div>
                                 </div>
                             </div>
                             <div class="about__progress-bar">
                                 <div class="about__progress-bar__name">css3</div>
                                 <div class="about__progress-bar__track">
-                                    <div class="about__progress-bar__track-line css"></div>
+                                    <div class="about__progress-bar__track-line wow css"></div>
                                 </div>
                             </div>
                             <div class="about__progress-bar">
                                 <div class="about__progress-bar__name">jquery</div>
                                 <div class="about__progress-bar__track">
-                                    <div class="about__progress-bar__track-line jquery"></div>
+                                    <div class="about__progress-bar__track-line wow jquery"></div>
                                 </div>
                             </div>
                             <div class="about__progress-bar">
                                 <div class="about__progress-bar__name">javascript</div>
                                 <div class="about__progress-bar__track">
-                                    <div class="about__progress-bar__track-line javascript"></div>
+                                    <div class="about__progress-bar__track-line wow javascript"></div>
+                                </div>
+                            </div>
+                            <div class="about__progress-bar">
+                                <div class="about__progress-bar__name">webdesign</div>
+                                <div class="about__progress-bar__track">
+                                    <div class="about__progress-bar__track-line wow webdesign"></div>
                                 </div>
                             </div>
                         </div>
                         <!-- /.about-block -->
                     </div>
                     <!-- /.cell -->
-                    <div class="cell"></div>
+                    <div class="cell">
+                        <div class="about-block">
+                            <h3 class="title">
+                                What i do?
+                            </h3>
+                            <div class="about-block__description wow rotateInDownLeft" data-wow-delay = "1s">
+                                <div class="about-block__description-icon">
+                                    <img src="img/icons/diamond.png" alt="diamond">
+                                </div>
+                                <div class="about-block__description-content">
+                                    <b>Graphic design</b>
+                                    <br>
+                                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat.
+                                </div>
+                            </div>
+                            <!-- /.about-block__description -->
+                            <div class="about-block__description wow rotateInDownLeft" data-wow-delay = "1.2s">
+                                <div class="about-block__description-icon">
+                                    <img src="img/icons/letter.png" alt="letter">
+                                </div>
+                                <div class="about-block__description-content">
+                                    <b>Print Design</b>
+                                    <br>
+                                    Sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa.
+                                </div>
+                            </div>
+                            <!-- /.about-block__description -->
+                            <div class="about-block__description wow rotateInDownLeft" data-wow-delay = "1.4s">
+                                <div class="about-block__description-icon">
+                                    <img src="img/icons/square.png" alt="square">
+                                </div>
+                                <div class="about-block__description-content">
+                                    <b>Web Design</b>
+                                    <br>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                </div>
+                            </div>
+                            <!-- /.about-block__description -->
+                            <div class="about-block__description wow rotateInDownLeft" data-wow-delay = "1.6s">
+                                <div class="about-block__description-icon">
+                                    <img src="img/icons/wide.png" alt="wide">
+                                </div>
+                                <div class="about-block__description-content">
+                                    <b>Development</b>
+                                    <br>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
+                                </div>
+                            </div>
+                            <!-- /.about-block__description -->
+                        </div>
+                        <!-- /.about-block -->
+                    </div>
                     <!-- /.cell -->
                 </div>
                 <!-- /.about__block -->
@@ -131,5 +189,9 @@
     
     <script src="js/jquery.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 </html>
