--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!-- /.header -->
 
     <main>
-        <section class="about">
+        <section class="about" id="about">
             <div class="container">
                 <div class="about__block">
                     <div class="cell">
@@ -127,7 +127,7 @@
                     </div>
                     <!-- /.cell -->
                     <div class="cell">
-                        <div class="about-block">
+                        <div class="about-block wow bounceInLeft" data-wow-delay = "0.5s">
                             <h3 class="title">
                                 What i do?
                             </h3>
