--- a/index.html
+++ b/index.html
@@ -185,6 +185,67 @@
             <!-- /.container -->
         </section>
         <!-- /.about -->
+
+        <section class="work" id="work">
+            <div class="work__block">
+                <div class="work-block">
+                    <div class="work-block__item">
+                        <div class="work-block__item-link">
+                            <a href="">
+                                <img src="img/work/project-1.png" alt="project-1">
+                            </a>
+                        </div>
+                        <div class="work-block__item-link">
+                            <a href="">
+                                <img src="img/work/project-2.png" alt="project-2">
+                            </a>
+                        </div>
+                        <div class="work-block__item-link">
+                            <a href="">
+                                <img src="img/work/project-3.png" alt="project-3">
+                            </a>
+                        </div>
+                        <div class="work-block__item-link">
+                            <a href="">
+                                <img src="img/work/project-4.png" alt="project-4">
+                            </a>
+                        </div>
+                    </div>
+                    <!-- /.work-block__item -->
+                    <div class="work-block__item">
+                        <div class="work-block__item-link">
+                            <a href="">
+                                <img src="img/work/project-5.png" alt="project-5">
+                            </a>
+                        </div>
+                        <div class="work-block__item-link">
+                            <a href="">
+                                <img src="img/work/project-6.png" alt="project-6">
+                            </a>
+                        </div>
+                        <div class="work-block__item-link">
+                            <a href="">
+                                <img src="img/work/project-7.png" alt="project-7">
+                            </a>
+                        </div>
+                        <div class="work-block__item-link">
+                            <a href="">
+                                <img src="img/work/project-8.png" alt="project-8">
+                            </a>
+                        </div>
+                    </div>
+                    <!-- /.work-block__item -->
+                </div>
+                <!-- /.work-block -->
+                <div class="work-block">
+                    <div class="work-block__item"></div>
+                    <!-- /.work-block__item -->
+                </div>
+                <!-- /.work-block -->
+            </div>
+            <!-- /.work__block -->
+        </section>
+        <!-- /.work -->
     </main>
     
     <script src="js/jquery.js"></script>
