--- a/index.html
+++ b/index.html
@@ -237,15 +237,65 @@
                     <!-- /.work-block__item -->
                 </div>
                 <!-- /.work-block -->
-                <div class="work-block">
-                    <div class="work-block__item"></div>
-                    <!-- /.work-block__item -->
-                </div>
-                <!-- /.work-block -->
             </div>
             <!-- /.work__block -->
         </section>
         <!-- /.work -->
+        <section class="reviews" id="reviews">
+            <div class="container">
+                <div class="reviews__block">
+                    <h3 class="title">What Clients Say?</h3>
+                    <div class="reviews-block">
+                        <div class="cell">
+                            <div class="reviews-block__item">
+                                <div class="reviews-block__item-personal_info">
+                                    <span class="name">JosE Graves</span>
+                                    <span class="position">Managing editor</span>
+                                </div>
+                                <div class="reviews-block__item-comment">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                </div>
+                            </div>
+                            <div class="reviews-block__item">
+                                <div class="reviews-block__item-personal_info">
+                                    <span class="name">Sheldon Floyd</span>
+                                    <span class="position">Director</span>
+                                </div>
+                                <div class="reviews-block__item-comment">
+                                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.cell -->
+                        <div class="cell">
+                            <div class="reviews-block__item">
+                                <div class="reviews-block__item-personal_info">
+                                    <span class="name">Harvey Wheeler</span>
+                                    <span class="position">Director</span>
+                                </div>
+                                <div class="reviews-block__item-comment">
+                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                </div>
+                            </div>
+                            <div class="reviews-block__item">
+                                <div class="reviews-block__item-personal_info">
+                                    <span class="name">Vanessa Scott</span>
+                                    <span class="position">Founder</span>
+                                </div>
+                                <div class="reviews-block__item-comment">
+                                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam.
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.cell -->
+                    </div>
+                    <!-- /.reviews-block -->
+                </div>
+                <!-- /.reviews__block -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.reviews -->
     </main>
     
     <script src="js/jquery.js"></script>
