--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <body>
-
     <header class="header">
         <div class="navbar">
             <div class="container">
@@ -59,7 +58,7 @@
                     <!-- /.hero__position -->
                 </div>
                 <!-- /.hero__info -->
-                <div class="scroll-down">
+                <div class="scroll-down" id="scroll-down">
                     <div class="scroll-down__arrow">
                         <span></span>
                         <span></span>
@@ -342,13 +341,16 @@
                 </div>
                 <div class="footer__block-info">
                     <span>Russia, Kirov</span>
-                    <span>kamizu00@mail.ru/+7 (953) 677 31-91</span>
+                    <span>kamizu00@mail.ru / +7 (953) 677 31-91</span>
                     <span>2021©ReiProfile</span>
                 </div>
             </div>
             <!-- /.footer__block -->
         </div>
         <!-- /.container -->
+        <div class="scroll-to-top">
+            <i class="fa fa-angle-up" aria-hidden="true"></i>
+        </div>
     </footer>
     <!-- /.footer -->
     
